WIP for flattening Entity structure.